# metaf

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  doxyfile  example_summary  make_test_xml.sh  makefile  readme.md
docs/sphinx/: about.rst  api.rst  api_cloudgroup.rst  api_cloudtype.rst  api_cloudtypesgroup.rst  api_direction.rst  api_distance.rst  api_group.rst  api_groupinfo.rst  api_groupparser.rst  api_keywordgroup.rst  api_layerforecastgroup.rst  api_lightninggroup.rst  api_locationgroup.rst  api_lowmidhighcloudgroup.rst  api_metaftime.rst  api_minmaxtemperaturegroup.rst  api_miscgroup.rst  api_parser.rst  api_parseresult.rst  api_precipitation.rst  api_precipitationgroup.rst  api_pressure.rst  api_pressuregroup.rst  api_pressuretendencygroup.rst  api_reference.rst  api_reporterror.rst  api_reportmetadata.rst  api_reportpart.rst  api_reporttimegroup.rst  api_reporttype.rst  api_runway.rst  api_runwaystategroup.rst  api_seasurfacegroup.rst  api_speed.rst  api_surfacefriction.rst  api_temperature.rst  api_temperaturegroup.rst  api_terraingroup.rst  api_terrainvisibility.rst  (+19 more)
examples/: explain.cpp  readme.md  summary.cpp  to_json.cpp  tutorial.cpp
examples/shellfiles/: explain.html  explain_shell.html  summary_shell.html  to_json_shell.html
include/: metaf.h  metaf.hpp
pages/: examples.html  index.html  style.css
pages/examples/weather_widget/: weather_widget.css
performance/: main.cpp  readme.md
src/: main.cpp  metaf.cpp  metaf.h  metaf_embind.h
test/: main.cpp  readme.md  test.h  test_cloudgroup.cpp  test_cloudlayersgroup.cpp  test_cloudtype.cpp  test_cloudtypesgroup.cpp  test_colourcodegroup.cpp  test_direction.cpp  test_distance.cpp  test_fixedgroup.cpp  test_fractionstrtouint.cpp  test_getsyntaxgroup.cpp  test_group.cpp  test_group.h  test_group_parser.cpp  test_group_parser.h  test_groupparser.cpp  test_keywordgroup.cpp  test_layerforecastgroup.cpp  test_lightninggroup.cpp  test_locationgroup.cpp  test_lowmidhighcloudgroup.cpp  test_metaftime.cpp  test_minmaxtemperaturegroup.cpp  test_miscgroup.cpp  test_parser.cpp  test_parser.h  test_plaintextgroup.cpp  test_precipitation.cpp  test_precipitationgroup.cpp  test_pressure.cpp  test_pressuregroup.cpp  test_pressuretendencygroup.cpp  test_rainfallgroup.cpp  test_reporttimegroup.cpp  test_runway.cpp  test_runwaystategroup.cpp  test_runwayvisualrangegroup.cpp  test_seasurfacegroup.cpp  (+30 more)
test/coverage/: CMakeLists.txt
